fix(side-nav): Remove perpetual scrollbar in Firefox

--- a/packages/side-nav/src/presenters/side-nav.scss
+++ b/packages/side-nav/src/presenters/side-nav.scss
@@ -18,7 +18,6 @@
   flex: 1 1 auto;
   height: 100%;
   margin: 4px 0;
-  overflow-y: scroll;
   overflow-x: hidden;
 
   &::-webkit-scrollbar {
